Finish image inpaint or outpaint
